@@ -31,6 +31,11 @@
      <relativePath>..</relativePath>
   </parent>
   <dependencies>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>${mysql-connector-java.version}</version>
+      </dependency>
     <dependency>
 	<groupId>com.google.code.gson</groupId>
 	<artifactId>gson</artifactId>
