@@ -23,7 +23,7 @@
     <parent>
       <groupId>org.apache.ranger</groupId>
       <artifactId>ranger</artifactId>
-      <version>0.5.4-2017010401</version>
+      <version>0.5.4-SNAPSHOT</version>
       <relativePath>..</relativePath>
     </parent>
 
