@@ -1,5 +1,7 @@
 Release Notes - Ranger - Version 0.5.4
 
-** JIRA
-    * [HADOOP-428] - "Ranger plug-in supports multiple RangerAdmin addresses"
+** HISTORY
+ * [ranger-0.5.4-20170119-02]
+    - [BUG] - "generate sentry provider, adjustment 'update' to 'insert'"
+    - [JIRA:HADOOP-428] - "Ranger plug-in supports multiple RangerAdmin addresses"
 
